--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     <div class="col-md-8 offset-md-1">
       {% assign categories = site.categories | sort %}
       {% for category in categories %}
-      <h3>On {{ category | first }}</h3>
+      <h3>分类 {{ category | first }}</h3>
       <p>{% for posts in category %} {% for post in posts %}
             <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>{% if forloop.last == false %},&nbsp;&nbsp;{% endif %}
         {% endfor %} {% endfor %}  </p>
